did some stuff idk

--- a/Frontend/bite/public/index.html
+++ b/Frontend/bite/public/index.html
@@ -3,7 +3,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCpNT8X2EQ48kkPJEvAuLCWBYqPkyApfC0&libraries=places"></script>
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
